Recurso de caculo de tempo de impressão implementado parcialmente

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Contas</title>
 </head>
+
 <body>
     <main>
         <form action="POST">
@@ -21,9 +23,15 @@
                 <select name="formmaquinas" id="imaquinas"></select>
             </section>
             <input type="submit" value="Calcular">
+            <div>
+                <div>
+                    <p id="areaResultado"></p>
+                </div>
+            </div>
         </form>
     </main>
-    
+
 </body>
 <script src="app.js"></script>
-</html>  
+
+</html>
