--- a/index.html
+++ b/index.html
@@ -4,77 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajudante de impressão</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .container {
-            margin: 0 auto;
-            width: 90%;
-            height: 90%;
-            background-color: purple;
-            display: flex;
-            flex-direction: column;
-            padding: 12px;
-            border-radius: 8px;
-
-        }
-
-        section {
-            /* background-color: honeydew; */
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 16px;
-
-        }
-
-        label {
-            /* display: inline-block; */
-            width: 50%;
-        }
-
-        input {
-            /* display: inline-block; */
-            width: 50%;
-        }
-    </style>
+    <title>Gestor de Contas</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
 <body>
     <main>
-        <div class="container">
-
-            <section>
+        <section class="box">
+        <form action="POST">
+            <section class="field">
                 <label for="iporcenteagem">Porcentagem</label>
-                <input type="number" name="formmaquinas" id="iporcenteagem" min="0" max="100">
+                <input class="input is-hovered"  type="number" name="formmaquinas" id="iporcenteagem" min="0" max="100">
             </section>
-            <section>
+            <section class="field">
                 <label for="imetros">Metros</label>
-                <input type="number" name="formmaquinas" id="imetros" min="0" step="0.01">
-            </section>
-            <section>
+                <input  class="input is-hovered"  type="number" name="formmaquinas" id="imetros" min="0" step="0.1">
+            </section class="field">
+            <section class="select">
                 <label for="imaquinas">Selecione a Maquina</label>
-                <select name="formmaquinas" id="imaquinas"></select>
-            </section>
-            <input type="button" value="Calcular" onclick="calcular()">
-            <!-- <input type="submit" value="Calcular"> -->
-            <div>
+                <input type="radio" name="imaquinas">
+                <select name="formmaquinas"class="is-hovered" id="imaquinas"></select>
+            </section class="field">
+            <input class="input is-hovered"  type="submit" value="Calcular">
+
+            <div class="field">
                 <div>
                     <p id="areaResultado"></p>
                 </div>
             </div>
-        </div>
+        </form>
+        </section>
     </main>
 
 </body>
