--- a/index.html
+++ b/index.html
@@ -11,28 +11,38 @@
 <body>
     <main>
         <section class="box">
-        <form action="POST">
-            <section class="field">
-                <label for="iporcenteagem">Porcentagem</label>
-                <input class="input is-hovered"  type="number" name="formmaquinas" id="iporcenteagem" min="0" max="100">
-            </section>
-            <section class="field">
-                <label for="imetros">Metros</label>
-                <input  class="input is-hovered"  type="number" name="formmaquinas" id="imetros" min="0" step="0.1">
-            </section class="field">
-            <section class="select">
-                <label for="imaquinas">Selecione a Maquina</label>
-                <input type="radio" name="imaquinas">
-                <select name="formmaquinas"class="is-hovered" id="imaquinas"></select>
-            </section class="field">
-            <input class="input is-hovered"  type="submit" value="Calcular">
+            <form>
+                <section class="field">
+                    <label for="iporcenteagem">Porcentagem</label>
+                    <input class="input is-hovered" type="number" name="formmaquinas" id="iporcenteagem" min="0"
+                        max="100">
+                </section>
+                <section class="field">
+                    <label for="imetros">Metros</label>
+                    <input class="input is-hovered" type="number" name="formmaquinas" id="imetros" min="0" step="0.1">
+                </section class="field">
 
-            <div class="field">
-                <div>
-                    <p id="areaResultado"></p>
+                <section class="control">
+                    <label class="radio">
+                        Mutoh
+                        <input type="radio" name="maquinas" class="maquinas"  checked> 
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="maquinas" class="maquinas"> PrismaJet
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="maquinas" class="maquinas"> PrismaTex
+                    </label>
+                </section class="field">
+                
+                <button class="button" onclick="calcular()">Calcular Metragem</button>
+
+                <div class="field">
+                    <div>
+                        <p id="areaResultado"></p>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
         </section>
     </main>
 
